Readd code from Tuesdays homework, as well as code up through the Sending Data Down With Inputs lesson.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,22 @@
 
   <h1>To Do List for {{month}}/{{day}}/{{year}}</h1>
   <h3>{{currentFocus}}</h3>
-  <ul>
-    <li *ngFor="let currentTask of tasks">{{currentTask.description}}</li>
-  </ul>
+  <app-task-list [childTaskList]="masterTaskList"></app-task-list>
+
+  <form>
+    <input [(ngModel)]="userName" type="text" name="user">
+  </form>
+
+<div *ngIf="selectedTask">
+  <h3>{{selectedTask.description}}</h3>
+  <p>Task Complete? {{selectedTask.done}}</p>
+  <h3>Edit Task</h3>
+  <label>Enter Task Description:</label>
+  <input [(ngModel)]="selectedTask.description">
+  <label>Enter Task Priority (1-3):</label>
+  <br>
+  <input type="radio" [(ngModel)]="selectedTask.priority" [value]="1">1 (Low Priority)<br>
+  <input type="radio" [(ngModel)]="selectedTask.priority" [value]="2">2 (Medium Priority)<br>
+  <input type="radio" [(ngModel)]="selectedTask.priority" [value]="3">3 (High Priority)<br>
+  <button (click)="doneEditting()">Done Editting</button>
+</div>
