Add new task feature as well as first pipe.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,5 @@
 <h1>To Do List for {{month}}/{{day}}/{{year}}</h1>
 <h3>{{currentFocus}}</h3>
 <app-task-list [childTaskList]="masterTaskList" (clickSender)="editTask($event)"></app-task-list>
-
-
-
-<app-edit-task></app-edit-task>
+<app-edit-task [childSelectedTask]="selectedTask" (clickedDone)="finishedEditing()"></app-edit-task>
+<app-new-task (sendTask)="addTask($event)"></app-new-task>
