--- a/src/app/edit-task/edit-task.component.html
+++ b/src/app/edit-task/edit-task.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="selectedTask">
-  <h3>{{selectedTask.description}}</h3>
-  <p>Task Complete? {{selectedTask.done}}</p>
+<div *ngIf="childSelectedTask">
+  <h3>{{childSelectedTask.description}}</h3>
+  <p>Task Complete? {{childSelectedTask.done}}</p>
   <h3>Edit Task</h3>
   <label>Enter Task Description:</label>
-  <input [(ngModel)]="selectedTask.description">
+  <input [(ngModel)]="childSelectedTask.description">
   <br>
   <label>Enter Task Priority (1-3):</label>
   <br>
-  <input type="radio" [(ngModel)]="selectedTask.priority" [value]="1">1 (Low Priority)<br>
-  <input type="radio" [(ngModel)]="selectedTask.priority" [value]="2">2 (Medium Priority)<br>
-  <input type="radio" [(ngModel)]="selectedTask.priority" [value]="3">3 (High Priority)<br>
-  <button (click)="finishedEditing()">Done</button>
+  <input type="radio" [(ngModel)]="childSelectedTask.priority" [value]="1">1 (Low Priority)<br>
+  <input type="radio" [(ngModel)]="childSelectedTask.priority" [value]="2">2 (Medium Priority)<br>
+  <input type="radio" [(ngModel)]="childSelectedTask.priority" [value]="3">3 (High Priority)<br>
+  <button (click)="finishedEditingClicked()">Done</button>
 </div>
