--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li [class]="priorityColor(currentTask)" *ngFor="let currentTask of childTaskList">{{currentTask.description}} <button (click)="editButtonClicked(currentTask)">Edit!</button></li>
+  <li [class]="priorityColor(currentTask)" *ngFor="let currentTask of childTaskList | completeness">{{currentTask.description}} <button (click)="editButtonClicked(currentTask)">Edit!</button></li>
 </ul>
